# Swarm

./: CHANGELOG.md  CLAUDE_CODE_COMPLETE_INTEGRATION_GUIDE.md  CLAUDE_CODE_EXTENSION_PROTOCOL.md  CLAUDE_CODE_MCP_QUICKSTART.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE.md  MCP_IDE_INTEGRATION.md  MCP_INTERCEPTION_SUMMARY.md  MCP_MANAGER_PLUGIN.md  Makefile  README-MITM.md  README.md  SWARM_ARCHITECTURE_GUIDE.md  SWARM_PLUGIN_DEVELOPMENT_GUIDE.md  SWARM_UPDATE_GUIDE.md  analyze-ide-deeper.sh  analyze-results.sh  auto-test-ide.sh  banner_analysis.txt  capture-mcp-final.sh  capture-mcp.sh  check-ide-env.sh  claude-session-capture.txt  connect.py  debug_blocking.py  debug_mcp.sh  debug_mcp_ipc.lua  deploy.sh  diagnose_mcp.lua  documentation.txt  find-mcp-connection.sh  force-mcp-intercept.sh  funding.json  install  install-deps.sh  install-swarm.sh  install.sh  intercept-mcp-complete.sh  (+32 more)
assets/: zellij.desktop
docs/: ARCHITECTURE.md  ERROR_HANDLING.md  MANPAGE.md  RELEASE.md  TERMINOLOGY.md  THIRD_PARTY_INSTALL.md
example/: alt-centered-config.kdl  config.kdl  default.kdl
nvim-gemini-ccide/: 18  HOW_MCP_WORKS.md  README.md  TEST_NEOVIM_MCP.md  auto_poll_monitor.py  continuous_ipc_monitor.py  demo_mcp.sh  find_claude_port.py  init.lua  install.sh  mcp_server.py  mcp_server_robust.py  mcp_server_v15.py  mcp_server_wrapper.sh  run_mcp_direct.sh  setup_test_env.sh  simple_ipc_test.lua  simple_mcp_server.py  simple_monitor.py  simple_tmux_test.sh  test.py  test_client.py  test_file.txt  test_in_tmux.sh  (+9 more)
zellij-tile/: Cargo.toml
zellij-tile/src/: lib.rs  shim.rs
(+190 files in other folders)
