[package]
name = "zellij-tile"
version = "0.0.6"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
description = "A small client-side library for writing Swarm plugins"
license = "MIT"

[dependencies]
clap = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
zellij-utils = { workspace = true }
